<resources>
    <string name="app_name">InDiary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Person">사람</string>
    <string name="Memory">추억</string>
    <string name="Character">특징</string>

    <string name="Update">수정</string>
    <string name="Delete">삭제</string>
    <string name="AddPerson">사람 추가</string>
    <string name="AddMemory">추억 추가</string>
    <string name="AddCharacter">특징 추가</string>

    <string name="Add">추가</string>
    <string name="Cancel">취소</string>
    <string name="Quit">종료</string>

    <string name="NameTitle">이름:</string>
    <string name="BirthTitle">생년월일:</string>
    <string name="AgeTitle">나이(만):</string>
    <string name="GenderTitle">성별:</string>
    <string name="TagTitle">태그:</string>
    <string name="MemoTitle">메모:</string>

    <string name="TitleTitle">제목:</string>
    <string name="WithTitle">With:</string>
    <string name="DateTitle">날짜:</string>
    <string name="PhotoTitle">사진:</string>
    <string name="ContentTitle">내용:</string>

    <string name="CharacterNameTitle">특징 이름:</string>
    <string name="CharacterContentTitle">특징 내용:</string>
    <string name="CharacterPhotoTitle">특징 사진:</string>

    <string name="Name">이름</string>
    <string name="Birth">생년월일</string>
    <string name="BirthHint">yyyymmdd</string>
    <string name="Age">나이(만)</string>
    <string name="Gender">성별</string>
    <string-array name="GenderDetail">
        <item>남</item>
        <item>여</item>
        <item>표기 안함</item>
    </string-array>
    <string name="Tag">태그</string>
    <string name="Memo">메모</string>

    <string name="Title">제목</string>
    <string name="With">With</string>
    <string name="Date">날짜</string>
    <string name="SetDate">날짜 설정</string>
    <string name="Photo">사진</string>
    <string name="Content">내용</string>

    <string name="CharacterName">특징 이름</string>
    <string name="CharacterContent">특징 내용</string>
    <string name="CharacterPhoto">특징 사진</string>

    <string name="AppNamePage">인(人) 다이어리</string>
    <string name="AddPersonPage">사람 추가하기</string>
    <string name="AddMemoryPage">추억 추가하기</string>
    <string name="UpdatePersonPage">사람 수정하기</string>
    <string name="UpdateMemoryPage">추억 수정하기</string>
    <string name="PersonDetail">사람 상세</string>
    <string name="MemoryDetail">추억 상세</string>
    <string name="UpdatePage">수정 페이지</string>
    <string name="DetailPage">상세 페이지</string>
    <string name="AddCharacterPage">특징 추가하기</string>

    <string name="clear">초기화</string>
    <string name="Complete">완료</string>
    <string name="favorite">즐겨찾기</string>

    <string name="NameEmptyError">이름을 입력해주세요.</string>
    <string name="BirthError">생년월일을 8자로 입력해주세요.</string>
    <string name="TitleEmptyError">제목을 입력해주세요.</string>
    <string name="DateError">날짜를 선택해주세요.</string>

    <string name="DeletePerson">정말로 이 사람을 삭제하시겠습니까?</string>
    <string name="DeleteMemory">정말로 이 추억을 삭제하시겠습니까?</string>
    <string name="AskQuit">정말로 종료하시겠습니까?</string>
</resources>