<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_add_character"
            style="@style/TV_22sp_normal_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/AddCharacterPage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_add_character_title"
            style="@style/TV_20sp_normal_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:text="@string/CharacterNameTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_add_character" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_add_character_name"
            style="@style/EV_material_margin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/CharacterName"
            app:layout_constraintBottom_toBottomOf="@+id/tv_add_character_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_add_character_title"
            app:layout_constraintTop_toTopOf="@+id/tv_add_character_title">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_add_character_content"
            style="@style/TV_20sp_normal_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:text="@string/CharacterContentTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_add_character_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_add_character_contents"
            style="@style/EV_material_margin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/CharacterContent"
            app:layout_constraintBottom_toBottomOf="@+id/tv_add_character_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_add_character_content"
            app:layout_constraintTop_toTopOf="@+id/tv_add_character_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bt_add_character_cancel"
            style="@style/BT_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="8dp"
            android:text="@string/Cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bt_add_character_confirm"
            app:layout_constraintTop_toBottomOf="@+id/et_add_character_contents" />

        <Button
            android:id="@+id/bt_add_character_confirm"
            style="@style/BT_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/Add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_add_character_contents" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>